objects/Case_Email_Subscription_BOA__c.object
<CustomObject>
    <description>Allow internal employees and external contacts to subscribe to email notifications for cases under specific Back Office Account</description>
    <fields>
        <fullName>Additional_Email_Addr__c</fullName>
        <label>Additional Email Addr</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Back_Office_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Back Office Account</label>
        <referenceTo>Back_Office_Account__c</referenceTo>
        <relationshipLabel>Case Email Subscriptions</relationshipLabel>
        <relationshipName>Case_Email_Subscriptions_BOA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Alternative_Email__c</fullName>
        <formula>Customer_Contact__r.Alternate_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Alternative Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Addr__c</fullName>
        <formula>Customer_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email Addr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>notContain</operation>
                <value>Genesys</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Email Subscriptions BOA</relationshipLabel>
        <relationshipName>Case_Email_Subscriptions_BOA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Genesys_Employee_Email__c</fullName>
        <formula>Genesys_Employee__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Genesys Employee Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genesys_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Genesys Employee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notContain</operation>
                <value>Portal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Email_Subscriptions_BOA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscriber_Email__c</fullName>
        <formula>CASE(RecordType.DeveloperName,
&quot;Customer_Contact&quot;, Contact_Email_Addr__c,
&quot;Genesys_Employee&quot;, Genesys_Employee_Email__c,
Additional_Email_Addr__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Name__c</fullName>
        <formula>CASE(RecordType.DeveloperName,
&quot;Customer_Contact&quot;, Customer_Contact__r.FirstName &amp; &quot; &quot;&amp; Customer_Contact__r.LastName,
&quot;Genesys_Employee&quot;, Genesys_Employee__r.Full_Name__c,
&quot;unspecified&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <label>Subscription Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Email Subscription BOA</label>
    <nameField>
        <displayFormat>BOAS-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Email Subscriptions BOA</pluralLabel>
    <recordTypes>
        <fullName>Additional_Email_Addr</fullName>
        <active>true</active>
        <label>Additional Email Addr</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Contact</fullName>
        <active>true</active>
        <label>Customer Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Genesys_Employee</fullName>
        <active>true</active>
        <label>Genesys Employee</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>